# sherpa-ncnn

./: build-ios.sh
runtime/android/: settings.gradle
runtime/android/app/: build.gradle
runtime/android/app/src/androidTest/java/com/k2fsa/sherpa/: ExampleInstrumentedTest.java
runtime/android/app/src/main/: AndroidManifest.xml
runtime/android/app/src/main/cpp/: CMakeLists.txt  cmake
runtime/android/app/src/main/cpp/kaldi-native-fbank/: kaldi-native-fbank.cmake
runtime/android/app/src/main/cpp/ncnn/: ncnn.cmake
runtime/android/app/src/main/cpp/sherpa-ncnn/csrc/: CMakeLists.txt  conv-emformer-model.cc  conv-emformer-model.h  decode.cc  decode.h  features.cc  features.h  lstm-model.cc  lstm-model.h  meta-data.cc  meta-data.h  model.cc  model.h  sherpa.cc  symbol-table.cc  symbol-table.h
runtime/android/app/src/main/java/com/k2fsa/sherpa/: MainActivity.java  Recognize.java  VoiceRectView.java
runtime/android/app/src/main/res/layout/: activity_main.xml
runtime/android/app/src/main/res/values/: themes.xml
runtime/android/app/src/main/res/values-night/: themes.xml
runtime/android/app/src/test/java/com/k2fsa/sherpa/: ExampleUnitTest.java
